--- a/.github/workflows/commands.yml
+++ b/.github/workflows/commands.yml
@@ -19,7 +19,7 @@ jobs:
     name: Run action
     runs-on: ubuntu-latest
     steps:
-      - uses: MinecraftForge/Actionable@v1
+      - uses: ForgeForce/ForgeCommands@jvm
         with:
           gh_app_key: ${{ secrets.GH_APP_KEY }}
           gh_app_name: ${{ secrets.GH_APP_NAME }}
