--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,8 @@ inputs:
     default: '4'
   labels_to_teams:
     default: 'default -> api, rendering -> rendering, LTS Backport -> legacy'
+  latest_version:
+    default: ''
 
 runs:
   using: 'docker'
