--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
   compileOnly 'org.jetbrains:annotations:23.1.0'
   implementation 'org.kohsuke:github-api:1.313'
   implementation 'org.bouncycastle:bcpkix-jdk15on:1.58'
+  implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.13.3'
 
   implementation 'io.jsonwebtoken:jjwt-api:0.10.5'
   implementation 'io.jsonwebtoken:jjwt-impl:0.10.5'
