--- a/.github/workflows/docusaurus.yml
+++ b/.github/workflows/docusaurus.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
+      - name: Grant execute perms for gradlew
+        run: chmox +x gradlew
       - name: Execute Gradle build
         run: ./gradlew build
 
