--- a/.github/workflows/docusaurus.yml
+++ b/.github/workflows/docusaurus.yml
@@ -26,7 +26,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: Grant execute perms for gradlew
-        run: chmox +x gradlew
+        run: chmod +x gradlew
       - name: Execute Gradle build
         run: ./gradlew build
 
