--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Push changes
         run: |
-          git config --global user.email "actionable@minecraftforge.net"
-          git config --global user.name "autoforge"
+          git config --global user.email "<121052304+autoforge[bot]@users.noreply.github.com>"
+          git config --global user.name "autoforge[bot]"
           
           git add dist/app.jar
           git commit -m "Built dist jar"
